# afrish

./: Cargo.toml  LICENSE  README.md
examples/: binding-example.rs  button-example.rs  check-button-example.rs  colour-chooser-example.rs  combobox-example.rs  entry-example.rs  file-dialog-example.rs  first-example.rs  font-chooser-example.rs  frame-example.rs  grid-example.rs  hello-world-2.rs  hello-world.rs  hello.rs  label-example.rs  messagebox-example.rs  notebook-example.rs  radio-button-example.rs  separator-example.rs  window-example.rs
examples/rstk-chart/: Cargo.toml
examples/rstk-chart/examples/: bar_chart.rs  box_plot.rs  gantt_chart.rs  histogram.rs  horizontal_bar_chart.rs  isometric_plot.rs  pie_chart.rs  plotdemos1.rs  plotdemos11.rs  plotdemos15.rs  plotdemos17.rs  plotdemos18.rs  plotdemos19.rs  plotdemos2.rs  (+17 more)
examples/rstk-examples/: Cargo.toml
src/: button.rs  canvas.rs  chart.rs  check_button.rs  combobox.rs  dialog.rs  entry.rs  font.rs  frame.rs  grid.rs  image.rs  label.rs  label_frame.rs  lib.rs  listbox.rs  menu.rs  notebook.rs  pack.rs  paned_window.rs  progressbar.rs  radio_button.rs  scale.rs  scrollbar.rs  separator.rs  spinbox.rs  text.rs  theme.rs  toplevel.rs  treeview.rs  widget.rs  widgets.rs  wish.rs
src/chart/: balloon.rs  bar_chart.rs  box_plot.rs  gantt_chart.rs  histogram.rs  isometric_plot.rs  pie_chart.rs  plaintext.rs  plotchart.rs  polar_plot.rs  radial_chart.rs  right_axis.rs  status_timeline.rs  ternary_diagram.rs  threed_bar_chart.rs  threed_plot.rs  threed_ribbon_plot.rs  time_chart.rs  tx_plot.rs  xy_plots.rs
(+35 files in other folders)
