[package]
name = "rstk"
version = "0.3.0"
authors = ["Peter Lane <peterlane@gmx.com>"]
edition = "2018"

categories = ["gui"]
description = "A Rust binding for the Tk graphics toolkit."
homepage = "https://peterlane.codeberg.page/rstk/"
repository = "https://codeberg.org/peterlane/rstk/"
keywords = ["gui", "tk"]
license = "MIT"
readme = "README.md"

[dependencies]
once_cell = "1.7.2"
