[package]
name = "rish"
version = "0.1.0"
authors = ["Brady Fomegne <brady.fomegne@outlook.com>"]
edition = "2021"

categories = ["gui"]
description = "A Rust binding for the Tk graphics toolkit."
repository = "https://github.com/pythonbrad/rish/"
keywords = ["gui", "tk"]
license = "MIT"
readme = "README.md"

[dependencies]
